[package]
name = "voice-ptt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tempfile = "3.8"
device_query = "4.0.1"
toml = "0.9.11"
